Trying a different approach. Bitangent function implemented.